welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: type mismatch;
 found   : Int
 required: Boolean
        if(y%2)
            ^